4.0.0 (April 22, 2019)
 - Added custom Impression Listener.
 - BlockUntilReady refactor.
 - Added getTreatmentWithConfig and getTreatmentsWithConfig methods.
 - Added support to YAML file for Localhost mode.
3.0.1 (March 8, 2019)
 - Updated Splits refreshing rate.
3.0.0 (Feb 19, 2019)
 - Updated SDK Parity.
 - BREAKING CHANGE: Moved Impressions to Single Queue.
2.1.1 (Dec 19, 2018)
 - Fixed traffic allocation issue on 1%.
2.1.0: (Oct 12, 2018)
 - Added Input Sanitization
2.0.0: (May 24, 2018)
 - Fixed bucketing key
1.1.1: (Apr 20, 2018)
 - Fixing http headers output
1.1.0: (Feb 9, 2018)
 - Split client supports .track method (events) in all falvours (inmemory-standalone, redis-standalone, redis-consumer)
1.0.0: (Dec 22, 2017)
 - Downgrade logging level for shared memory messages