@@ -1,4 +1,4 @@
 package splitio
 
 // Version contains a string with the split sdk version
-const Version = "4.0.0-rc3"
+const Version = "4.0.0-rc4"
